force-app/main/default/objects/AcctPlanWallet__c/fields/SumOfPaymentCurrencyAmtPerYear__c.field-meta.xml
<CustomField>
    <fullName>SumOfPaymentCurrencyAmtPerYear__c</fullName>
    <description>Total of Payment Currency Amount per year</description>
    <inlineHelpText>Total of Payment Currency Amount per year</inlineHelpText>
    <label>Total of Payment Currency Amount / Year</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>