force-app/main/default/objects/AcctPlanWallet__c/fields/SumOfPaymentCurrencyPortion__c.field-meta.xml
<CustomField>
    <fullName>SumOfPaymentCurrencyPortion__c</fullName>
    <description>Total of Payment Currency Portion</description>
    <inlineHelpText>Total of Payment Currency Portion</inlineHelpText>
    <label>Total of Payment Currency Portion</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>