force-app/main/default/objects/AcctPlanWallet__c/fields/SumOfPaymentDomesticAvgPerMonth__c.field-meta.xml
<CustomField>
    <fullName>SumOfPaymentDomesticAvgPerMonth__c</fullName>
    <description>Total of column Domestic (Vol.)</description>
    <inlineHelpText>Total of column Domestic (Vol.)</inlineHelpText>
    <label>Total Domestic (Vol.)</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>