force-app/main/default/objects/AcctPlanWallet__c/fields/SumOfPaymentDomesticVolPercent__c.field-meta.xml
<CustomField>
    <fullName>SumOfPaymentDomesticVolPercent__c</fullName>
    <description>Total of column % Vol.</description>
    <inlineHelpText>Total of column % Vol.</inlineHelpText>
    <label>Total % Vol</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>