force-app/main/default/objects/AcctPlanWallet__c/fields/SumOfPaymentDomesticWalletCashFee__c.field-meta.xml
<CustomField>
    <fullName>SumOfPaymentDomesticWalletCashFee__c</fullName>
    <description>Total of column Wallet Cash Fee</description>
    <inlineHelpText>Total of column Wallet Cash Fee</inlineHelpText>
    <label>Total Wallet Cash Fee</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>