force-app/main/default/objects/AcctPlanWallet__c/fields/SumOfPaymentImportImportVol__c.field-meta.xml
<CustomField>
    <fullName>SumOfPaymentImportImportVol__c</fullName>
    <description>Total of column % Vol.</description>
    <inlineHelpText>Total of column % Vol.</inlineHelpText>
    <label>Total % Vol.</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>