force-app/main/default/objects/AcctPlanWallet__c/fields/SumOfPaymentImportNoOfTransaction__c.field-meta.xml
<CustomField>
    <fullName>SumOfPaymentImportNoOfTransaction__c</fullName>
    <description>Total Domestic (Vol.) average per month</description>
    <inlineHelpText>Total Domestic (Vol.) average per month</inlineHelpText>
    <label>Total Domestic (Vol.)</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>