force-app/main/default/objects/AcctPlanWallet__c/fields/SumOfPaymentImportVolPercent__c.field-meta.xml
<CustomField>
    <fullName>SumOfPaymentImportVolPercent__c</fullName>
    <label>Total Vol.</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>