force-app/main/default/objects/AcctPlanWallet__c/fields/SumOfWalletASFee__c.field-meta.xml
<CustomField>
    <fullName>SumOfWalletASFee__c</fullName>
    <description>Total Wallet AS Fee</description>
    <inlineHelpText>Total Wallet AS Fee</inlineHelpText>
    <label>Total Wallet AS Fee (Yearly:THB)</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>