force-app/main/default/objects/AcctPlanWallet__c/fields/SumOfWalletCashFee__c.field-meta.xml
<CustomField>
    <fullName>SumOfWalletCashFee__c</fullName>
    <description>Total Wallet Cash fee (yearly)</description>
    <formula>SumOfCollectionWalletCashFee__c + SumOfPaymentDomesticWalletCashFee__c</formula>
    <inlineHelpText>Total Wallet Cash fee (yearly)</inlineHelpText>
    <label>SumOfWalletCashFee</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>