force-app/main/default/objects/AcctPlanWallet__c/fields/SumOfWalletCreditFeeYearly__c.field-meta.xml
<CustomField>
    <fullName>SumOfWalletCreditFeeYearly__c</fullName>
    <description>Total Wallet Credit fee (Yearly)</description>
    <inlineHelpText>Total Wallet Credit fee (Yearly)</inlineHelpText>
    <label>SumOfWalletCreditFeeYearly</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>