force-app/main/default/objects/AcctPlanWallet__c/fields/SumOfWalletFXFeePerYear__c.field-meta.xml
<CustomField>
    <fullName>SumOfWalletFXFeePerYear__c</fullName>
    <defaultValue>0</defaultValue>
    <description>4.1,&apos;FX Fee Products&apos;    &gt;&gt;     SumWalletFX   &gt;&gt; SumOfWalletFXFeePerYear__c
Avg. FX Margin (calculated from weighted average)</description>
    <inlineHelpText>Avg. FX Margin (calculated from weighted average)</inlineHelpText>
    <label>SumOfWalletFXFeePerYear</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>