force-app/main/default/objects/AcctPlanWallet__c/fields/SumOfWalletLGFeeYearly__c.field-meta.xml
<CustomField>
    <fullName>SumOfWalletLGFeeYearly__c</fullName>
    <description>Total Wallet LG fee (Yearly)</description>
    <inlineHelpText>Total Wallet LG fee (Yearly)</inlineHelpText>
    <label>SumOfWalletLGFeeYearly</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>