force-app/main/default/objects/AcctPlanWallet__c/fields/SumOfWalletNiicLongTermLoan__c.field-meta.xml
<CustomField>
    <fullName>SumOfWalletNiicLongTermLoan__c</fullName>
    <description>Total Wallet NIIc Long term loan (Yearly)</description>
    <inlineHelpText>Total Wallet NIIc Long term loan (Yearly)</inlineHelpText>
    <label>SumOfWalletNiicLongTermLoan</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>