force-app/main/default/objects/AcctPlanWallet__c/fields/SumOfWalletTFFee__c.field-meta.xml
<CustomField>
    <fullName>SumOfWalletTFFee__c</fullName>
    <description>Total Wallet TF fee (yearly)</description>
    <formula>SumOfCollectionExportWalletTradeFee__c + SumOfPaymentImportWalletTFFee__c</formula>
    <inlineHelpText>Total Wallet TF fee (yearly)</inlineHelpText>
    <label>SumOfWalletTFFee</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>