force-app/main/default/objects/AcctPlanWallet__c/fields/Total_Fee__c.field-meta.xml
<CustomField>
    <fullName>Total_Fee__c</fullName>
    <description>Fee</description>
    <formula>if( AcctPlanCompanyProfile__r.isMiniMode__c , Total_Fee_Mini__c  ,
SumOfWalletTFFee__c +
 SumOfAcctPlanForeignWalletFXFeePerYear__c+
 SumOfWalletLGFeeYearly__c+
 SumOfWalletCashFee__c+
 SumOfWalletCreditFeeYearly__c+
 TotalWalletBAFee__c + 
SumOfWalletASFee__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>