force-app/main/default/objects/AcctPlanWallet__c/fields/Total_Fee_Mini__c.field-meta.xml
<CustomField>
    <fullName>Total_Fee_Mini__c</fullName>
    <label>Total_Fee_Mini</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>