force-app/main/default/objects/AcctPlanWallet__c/fields/TotalCreditFee__c.field-meta.xml
<CustomField>
    <fullName>TotalCreditFee__c</fullName>
    <label>TotalCreditFee</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>