force-app/main/default/objects/AcctPlanWallet__c/fields/TotalDomesticAmtPerYear__c.field-meta.xml
<CustomField>
    <fullName>TotalDomesticAmtPerYear__c</fullName>
    <description>ยอดขายในประเทศต่อปี</description>
    <formula>TotalDomesticPercent__c  *  EstimatedSalesAmtPerYear__c</formula>
    <inlineHelpText>ยอดขายในประเทศต่อปี</inlineHelpText>
    <label>TotalDomesticAmtPerYear</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>