force-app/main/default/objects/AcctPlanWallet__c/fields/TotalDomesticPercent__c.field-meta.xml
<CustomField>
    <fullName>TotalDomesticPercent__c</fullName>
    <description>สัดส่วนการขายในประเทศ</description>
    <inlineHelpText>สัดส่วนการขายในประเทศ</inlineHelpText>
    <label>Total Sales Domestic</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>