force-app/main/default/objects/AcctPlanWallet__c/fields/TotalExportAmtPerYear__c.field-meta.xml
<CustomField>
    <fullName>TotalExportAmtPerYear__c</fullName>
    <description>ยอดขายต่างประเทศต่อปี</description>
    <formula>TotalExportPercent__c  *  EstimatedSalesAmtPerYear__c</formula>
    <inlineHelpText>ยอดขายต่างประเทศต่อปี</inlineHelpText>
    <label>TotalExportAmtPerYear</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>