force-app/main/default/objects/AcctPlanWallet__c/fields/TotalExportAvgPerMonth__c.field-meta.xml
<CustomField>
    <fullName>TotalExportAvgPerMonth__c</fullName>
    <description>Total of column Export (Vol.)</description>
    <inlineHelpText>Total of column Export (Vol.)</inlineHelpText>
    <label>Total Export (Vol.) (Avg per Month)</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>