force-app/main/default/objects/AcctPlanWallet__c/fields/TotalExportPercent__c.field-meta.xml
<CustomField>
    <fullName>TotalExportPercent__c</fullName>
    <description>สัดส่วนการขายต่างประเทศ</description>
    <formula>1-  TotalDomesticPercent__c</formula>
    <inlineHelpText>สัดส่วนการขายต่างประเทศ</inlineHelpText>
    <label>TotalExportPercent</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>