force-app/main/default/objects/AcctPlanWallet__c/fields/TotalPayment__c.field-meta.xml
<CustomField>
    <fullName>TotalPayment__c</fullName>
    <description>ค่าใช้จ่ายรวมทั้งต้นทุนขายและ operating expense เข้าด้วยกัน</description>
    <formula>COGSAmount__c  +  OperatingExpAmount__c</formula>
    <inlineHelpText>ค่าใช้จ่ายรวมทั้งต้นทุนขายและ operating expense เข้าด้วยกัน</inlineHelpText>
    <label>TotalPayment</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>