force-app/main/default/objects/AcctPlanWallet__c/fields/TotalPaymentDomesticAmtPerYear__c.field-meta.xml
<CustomField>
    <fullName>TotalPaymentDomesticAmtPerYear__c</fullName>
    <description>Amount per year (THB) - Payment Domestic</description>
    <formula>TotalPaymentDomesticPercent__c  *  TotalPayment__c</formula>
    <inlineHelpText>Amount per year (THB) - Payment Domestic</inlineHelpText>
    <label>TotalPaymentDomesticAmtPerYear</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>