force-app/main/default/objects/AcctPlanWallet__c/fields/TotalPaymentDomesticPercent__c.field-meta.xml
<CustomField>
    <fullName>TotalPaymentDomesticPercent__c</fullName>
    <description>Total % Payment Domestic</description>
    <inlineHelpText>Total % Payment Domestic</inlineHelpText>
    <label>Total % Domestic</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>