force-app/main/default/objects/AcctPlanWallet__c/fields/TotalPaymentImportAmtPerYear__c.field-meta.xml
<CustomField>
    <fullName>TotalPaymentImportAmtPerYear__c</fullName>
    <description>Amount per year (THB) - Payment Import</description>
    <formula>TotalPayment__c  *  TotalPaymentImportPercent__c</formula>
    <inlineHelpText>Amount per year (THB) - Payment Import</inlineHelpText>
    <label>TotalPaymentImportAmtPerYear</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>