force-app/main/default/objects/AcctPlanWallet__c/fields/TotalPaymentImportPercent__c.field-meta.xml
<CustomField>
    <fullName>TotalPaymentImportPercent__c</fullName>
    <description>Total % Payment Import</description>
    <formula>1 -  TotalPaymentDomesticPercent__c</formula>
    <inlineHelpText>Total % Payment Import</inlineHelpText>
    <label>TotalPaymentImportPercent</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>