force-app/main/default/objects/AcctPlanWallet__c/fields/TotalWalletBAFee__c.field-meta.xml
<CustomField>
    <fullName>TotalWalletBAFee__c</fullName>
    <description>Total Wallet BA  fee (Unit : Baht)</description>
    <formula>WalletOfBAFee__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total Wallet BA  fee (Unit : Baht)</inlineHelpText>
    <label>TotalWalletBAFee</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>