force-app/main/default/objects/AcctPlanWallet__c/fields/TotalWalletNiic__c.field-meta.xml
<CustomField>
    <fullName>TotalWalletNiic__c</fullName>
    <label>Capital Wallet Niic Yearly</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>