force-app/main/default/objects/AcctPlanWallet__c/fields/TotalWalletNIID__c.field-meta.xml
<CustomField>
    <fullName>TotalWalletNIID__c</fullName>
    <description>Total Wallet NIId (yearly)</description>
    <formula>if( AcctPlanCompanyProfile__r.isMiniMode__c , TotalWalletNIID_Mini__c ,WalletNiid_CashOnHand__c + WalletNiid_OperatingTransaction__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total Wallet NIId (yearly)</inlineHelpText>
    <label>TotalWalletNIID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>