force-app/main/default/objects/AcctPlanWallet__c/fields/TotalWalletNIID_Mini__c.field-meta.xml
<CustomField>
    <fullName>TotalWalletNIID_Mini__c</fullName>
    <label>TotalWalletNIID_Mini</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>