force-app/main/default/objects/AcctPlanWallet__c/fields/Wallet_FX_Fee_Yearly_THB__c.field-meta.xml
<CustomField>
    <fullName>Wallet_FX_Fee_Yearly_THB__c</fullName>
    <formula>if(ISNULL(Spread__c),0,if(Spread__c&gt;0,Spread__c,0)) * 

 if(ISNULL(FX_Volume_per_Year_THB__c),0,FX_Volume_per_Year_THB__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Wallet FX Fee (Yearly: THB)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>