force-app/main/default/objects/AcctPlanWallet__c/fields/WalletASFee_AgencyService__c.field-meta.xml
<CustomField>
    <fullName>WalletASFee_AgencyService__c</fullName>
    <description>Wallet AS Fee - Agency Service</description>
    <inlineHelpText>Wallet AS Fee - Agency Service</inlineHelpText>
    <label>Wallet AS Fee - Agency Service</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>