force-app/main/default/objects/AcctPlanWallet__c/fields/WalletASFee_Custodian__c.field-meta.xml
<CustomField>
    <fullName>WalletASFee_Custodian__c</fullName>
    <description>Wallet AS Fee - Custodian</description>
    <inlineHelpText>Wallet AS Fee - Custodian</inlineHelpText>
    <label>Wallet AS Fee - Custodian (Yearly:THB)</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>