force-app/main/default/objects/AcctPlanWallet__c/fields/WalletASFee_FundSupervisory__c.field-meta.xml
<CustomField>
    <fullName>WalletASFee_FundSupervisory__c</fullName>
    <description>Wallet AS Fee - Fund Supervisory</description>
    <inlineHelpText>Wallet AS Fee - Fund Supervisory</inlineHelpText>
    <label>Wallet AS Fee - Fund Supervisory</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>