force-app/main/default/objects/AcctPlanWallet__c/fields/WalletASFee_MiddleOffice__c.field-meta.xml
<CustomField>
    <fullName>WalletASFee_MiddleOffice__c</fullName>
    <description>Wallet AS Fee - Middle Office</description>
    <inlineHelpText>Wallet AS Fee - Middle Office</inlineHelpText>
    <label>Wallet AS Fee - Middle Office</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>