force-app/main/default/objects/AcctPlanWallet__c/fields/WalletASFee_RegistrarPaymentAgent__c.field-meta.xml
<CustomField>
    <fullName>WalletASFee_RegistrarPaymentAgent__c</fullName>
    <description>Wallet AS Fee - Registra &amp; Payment Agent</description>
    <inlineHelpText>Wallet AS Fee - Registra &amp; Payment Agent</inlineHelpText>
    <label>Wallet AS Fee - Registra &amp; Payment Agent</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>