force-app/main/default/objects/AcctPlanWallet__c/fields/WalletNiid_CashOnHand__c.field-meta.xml
<CustomField>
    <fullName>WalletNiid_CashOnHand__c</fullName>
    <description>Wallet NIId (Yearly)</description>
    <formula>(CashOnHand__c * CashOnHand_Nimd__c ) + (InvestmentAmount__c * InvestmentAmount_NIMd__c )</formula>
    <inlineHelpText>Wallet NIId (Yearly)</inlineHelpText>
    <label>WalletNiid CashOnHand</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>