force-app/main/default/objects/AcctPlanWallet__c/fields/WalletNiid_OperatingTransaction__c.field-meta.xml
<CustomField>
    <fullName>WalletNiid_OperatingTransaction__c</fullName>
    <description>Wallet NIId (Yearly)</description>
    <formula>( EstimatedSalesAmtPerYear__c * NimdPercent_OperatingTransaction__c * CashCycle__c ) / 365</formula>
    <inlineHelpText>Wallet NIId (Yearly)</inlineHelpText>
    <label>WalletNiid OperatingTransaction</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>