force-app/main/default/objects/AcctPlanWallet__c/fields/WalletOfBAFee__c.field-meta.xml
<CustomField>
    <fullName>WalletOfBAFee__c</fullName>
    <description>Wallet of BA fee</description>
    <formula>(if(isnull(BA_Premium__c),0,BA_Premium__c)*30)/107</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Wallet of BA fee</inlineHelpText>
    <label>WalletOfBAFee</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>